feat: add roles doc to swagger
